<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Turn-Based RPG Simple Combat Arena</string>
    <string name="action_settings">Settings</string>
    <string name="bt_act">Execute</string>
    <string name="bt_use">Use</string>
    <string name="bt_auto">Auto</string>
    <string name="bt_run">Run</string>
    <string name="bt_begin">Begin</string>
    <string name="bt_about">About</string>
    <string name="bt_exit">Exit</string>
    <string name="txt_race">Race</string>
    <string name="txt_job">Class</string>
    <string name="txt_name">Name</string>    
    <string name="msg_about">The \"Turn-Based RPG Simple Combat Arena\" project is authored by Claudiu-Ştefan Costea, and it is
         distributed under the terms of the Apache License, Version 2.0 (described at http://www.apache.org/licenses/LICENSE-2.0),
         and without any warranty.\n\nThe project includes graphic resources designed by Reiner \"Tiles\" Prokein, which have been
         released under the terms described at http://www.reinerstilesets.de/lizenz.\n\nThe project also includes the \"Rhino\" Java
         library, developed by Mozilla, released under the terms described at https://developer.mozilla.org/en-US/docs/Mozilla/Projects/Rhino/License.
         Its source code can be found at https://github.com/mozilla/rhino.\n\nThank you for trying this application.</string>
</resources>