<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BattleActivity" >

    <ImageView
        android:id="@+id/ImgEnemy1"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignRight="@+id/AutoBt"
        android:layout_alignTop="@+id/ImgPlayer1" />

    <ImageView
        android:id="@+id/ImgEnemy2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_above="@+id/ItemCost"
        android:layout_alignLeft="@+id/ImgEnemy3" />

    <ImageView
        android:id="@+id/ImgEnemy4"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignBottom="@+id/ItemCost"
        android:layout_alignLeft="@+id/ImgEnemy1" />

    <ImageView
        android:id="@+id/ImgPlayer2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_above="@+id/ItemCost"
        android:layout_alignLeft="@+id/ImgPlayer3" />

    <TextView
        android:id="@+id/SkillCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ItemCost"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/AutoBt"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/AutoBt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/bt_auto" />

    <Button
        android:id="@+id/RunBt"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AutoBt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/bt_run" />

    <ImageView
        android:id="@+id/ImgPlayer3"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/linearLayout1" />

    <TextView
        android:id="@+id/ItemCost"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/ImgPlayer3"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/RunBt"
        android:gravity="bottom"
        android:maxLines="2"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ImageView
        android:id="@+id/ImgEnemy3"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignRight="@+id/SkillCost"
        android:layout_alignTop="@+id/SkillCost"
        android:layout_marginRight="50dp" />

    <ImageView
        android:id="@+id/ImgPlayer4"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignBottom="@+id/ItemCost"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/ImgPlayer1"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_alignLeft="@+id/ImgPlayer4"
        android:layout_below="@+id/SkillCost" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Spinner
            android:id="@+id/SkillBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/ActBt"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/bt_act" />

        <Spinner
            android:id="@+id/TargetBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        
        <Button
            android:id="@+id/UseBt"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/bt_use" />

        <Spinner
            android:id="@+id/ItemBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        
    </LinearLayout>

</RelativeLayout>